--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
 			<canvas id="qrcode"></canvas>
 		</section>
 		<section id="Form">
-			<input placeholder="请输入关键词" />
-			<input type="checkbox" />
-			<label>是否监听来自微信群的消息</label>
+			<input id="keyword" placeholder="请输入关键词" />
+			<input id="response" placeholder="请输入回复信息" />
+
+			<input id="fromRoom" type="checkbox" />
+			<label>监听来自微信群的消息</label>
 		</section>
 		<section id="Log">
 		</section>
