--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
 	<section id="Main">
 		<section id="QrcodeSection">
 			<h3>登录二维码</h3>
+			<section>
+				<button id="relogin">重新登录</button>
+			</section>
+			<img id="userAvatar"></img>
 			<canvas id="qrcode"></canvas>
 		</section>
 		<section id="Form">
 			<input id="keyword" placeholder="请输入关键词" />
 			<input id="response" placeholder="请输入回复信息" />
-
-			<input id="fromRoom" type="checkbox" />
-			<label>监听来自微信群的消息</label>
 		</section>
 		<section id="Log">
 		</section>
